# lang_switcher

./: .gitignore  Cargo.toml  README.md
contrib/: 99-lang-switcher.rules  lang-switcher.service
src/: atspi_bridge.rs  cli.rs  config.rs  converter.rs  daemon.rs  doctor.rs  gnome.rs  hotkey.rs  injector.rs  input_capture.rs  keymap.rs  lib.rs  main.rs  primary_selection.rs  selection.rs  word_buffer.rs
